--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,27 @@ header h1 {
   flex-flow: column;
   text-align: center;
   width: 60%;
+  min-height: 400px;
+  background-color: #dddddd;
+  border-radius: 20px;
+}
+
+#bingo-settings h2 {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 20px;
+  padding: 20px;
+  background-color: aquamarine;
+  border: solid 2px;
+  border-radius: 10px;
 }
 
 #bingo-settings .setting {
   display: flex;
   width: 80%;
-  margin: 30px;
+  padding: 30px;
+  margin: 0 auto;
+  background-color: #fff;
 }
 
 #bingo-settings .setting #bingo-range {
@@ -82,18 +97,15 @@ header h1 {
 }
 
 button {
-  position: relative;
-  display: inline-block;
   font-weight: bold;
   padding: 10px 20px;
   text-decoration: none;
   background: aquamarine;
-  transition: 0.4s;
-  margin: 20px;
+  margin-top: 50px;
+  border-radius: 10px;
 }
 
 button:hover {
-  background: aquamarine;
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32);
   /*影*/
 }
@@ -129,7 +141,7 @@ td {
 
 footer {
   text-align: right;
-  background-color: #bbbbbb;
+  background-color: #dddddd;
   padding: 30px;
   margin-top: 50px;
 }
