--- a/css/styles.scss
+++ b/css/styles.scss
@@ -31,11 +31,24 @@ header {
         flex-flow: column;
         text-align: center;
         width: 60%;
-
+        min-height: 400px;
+        background-color: #dddddd;
+        border-radius: 20px;
+        h2{
+            font-size: 30px;
+            font-weight: bold;
+            margin: 20px;
+            padding: 20px;
+            background-color: $main-color;
+            border: solid 2px;
+            border-radius: 10px;
+        }
         .setting {
             display: flex;
             width: 80%;
-            margin: 30px;
+            padding: 30px;
+            margin: 0 auto;
+            background-color: #fff;
             #bingo-range {
                 margin-left: auto;
             }
@@ -84,16 +97,13 @@ header {
 }
 
 button {
-    position: relative;
-    display: inline-block;
     font-weight: bold;
     padding: 10px 20px;
     text-decoration: none;
     background: $main-color;
-    transition: 0.4s;
-    margin: 20px;   
+    margin-top: 50px;
+    border-radius: 10px;
     &:hover {
-        background: $main-color;
         box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32); /*影*/
     }
 }
@@ -129,7 +139,7 @@ td {
 
 footer {
     text-align: right;
-    background-color: #bbbbbb;
+    background-color: #dddddd;
     padding: 30px;
     margin-top: 50px;
     p {
