--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,6 @@ header h1 {
   flex-flow: column;
   text-align: center;
   width: 60%;
-  min-height: 400px;
   background-color: #dddddd;
   border-radius: 20px;
 }
@@ -61,9 +60,26 @@ header h1 {
   margin: auto;
 }
 
-#bingo-create {
-  width: 200px;
-  margin: auto;
+#bingo-settings--accordion-menu dt {
+  cursor: pointer;
+}
+
+#bingo-settings--accordion-menu dd {
+  display: none;
+}
+
+#bingo-settings button {
+  font-weight: bold;
+  padding: 10px 20px;
+  text-decoration: none;
+  background: aquamarine;
+  margin: 20px auto;
+  border-radius: 10px;
+}
+
+#bingo-settings button:hover {
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32);
+  /*影*/
 }
 
 .input-range[type="range"] {
@@ -96,20 +112,6 @@ header h1 {
   transition: 0.2s;
 }
 
-button {
-  font-weight: bold;
-  padding: 10px 20px;
-  text-decoration: none;
-  background: aquamarine;
-  margin-top: 50px;
-  border-radius: 10px;
-}
-
-button:hover {
-  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32);
-  /*影*/
-}
-
 #main-inner {
   display: flex;
   justify-content: center;
@@ -140,13 +142,84 @@ td {
 }
 
 footer {
-  text-align: right;
+  display: flex;
+  flex-flow: column;
   background-color: #dddddd;
-  padding: 30px;
+  padding: 20px;
   margin-top: 50px;
 }
 
 footer p {
-  margin: 5px 0;
+  margin: 5px;
+  margin-left: auto;
+}
+
+footer .sns-links {
+  margin-left: auto;
+  display: flex;
+}
+
+footer .sns-links .github a {
+  margin: 10px;
+  text-decoration: none;
+  color: #252A2E;
+  font-size: 40px;
+}
+
+footer .sns-links .twitter a {
+  margin: 10px;
+  text-decoration: none;
+  color: #55acee;
+  font-size: 40px;
+}
+
+.popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  transition: 0.6s;
+  display: none;
+}
+
+.popup-inner {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 600px;
+  padding: 50px;
+  background-color: #fff;
+  z-index: 2;
+}
+
+.popup .close-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.popup .close-btn i {
+  font-size: 20px;
+  color: #333;
+}
+
+.popup .black-background {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1;
+  cursor: pointer;
 }
 /*# sourceMappingURL=styles.css.map */
