--- a/css/styles.scss
+++ b/css/styles.scss
@@ -31,10 +31,9 @@ header {
         flex-flow: column;
         text-align: center;
         width: 60%;
-        min-height: 400px;
         background-color: #dddddd;
         border-radius: 20px;
-        h2{
+        h2 {
             font-size: 30px;
             font-weight: bold;
             margin: 20px;
@@ -56,10 +55,25 @@ header {
                 margin: auto;
             }
         }
-    }
-    &-create {
-        width: 200px;
-        margin: auto;
+        &--accordion-menu {
+            dt {
+                cursor: pointer;
+            }
+            dd {
+                display: none;
+            }
+        }
+        button {
+            font-weight: bold;
+            padding: 10px 20px;
+            text-decoration: none;
+            background: $main-color;
+            margin: 20px auto;
+            border-radius: 10px;
+            &:hover {
+                box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32); /*影*/
+            }
+        }
     }
 }
 
@@ -96,18 +110,6 @@ header {
     }
 }
 
-button {
-    font-weight: bold;
-    padding: 10px 20px;
-    text-decoration: none;
-    background: $main-color;
-    margin-top: 50px;
-    border-radius: 10px;
-    &:hover {
-        box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32); /*影*/
-    }
-}
-
 #main-inner {
     display: flex;
     justify-content: center;
@@ -120,7 +122,6 @@ table {
     margin: auto;
     border: 2px solid #fff;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.32); /*影*/
-    
 }
 
 th,
@@ -138,11 +139,78 @@ td {
 }
 
 footer {
-    text-align: right;
+    display: flex;
+    flex-flow: column;
     background-color: #dddddd;
-    padding: 30px;
+    padding: 20px;
     margin-top: 50px;
     p {
-        margin: 5px 0;
+        margin: 5px;
+        margin-left: auto;
+    }
+    .sns-links {
+        margin-left: auto;
+        display: flex;
+        
+
+        .github a{
+            margin: 10px;
+            text-decoration: none;
+            color: #252A2E;
+            font-size: 40px;
+        }
+        .twitter a{
+            margin: 10px;
+            text-decoration: none;
+            color: #55acee;
+            font-size: 40px;
+        }
+    }
+}
+
+.popup {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    transition: 0.6s;
+    display: none;
+
+    &-inner {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        max-width: 600px;
+        padding: 50px;
+        background-color: #fff;
+        z-index: 2;
+    }
+    .close-btn {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        cursor: pointer;
+        i {
+            font-size: 20px;
+            color: #333;
+        }
+    }
+    .black-background {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: 1;
+        cursor: pointer;
     }
 }
