--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,11 +1,31 @@
 $main-color: aquamarine;
+$sp: 480px;
+$pc: 1024px;
+
+@mixin sp {
+    @media (min-width: ($sp)) {
+        @content;
+    }
+}
+
+@mixin pc {
+    @media (min-width: ($pc)) {
+        @content;
+    }
+}
 
 body {
     font-family: "Courier New", Courier, monospace;
     display: flex;
     flex-flow: column;
     min-height: 100vh;
-    min-width: 600px;
+    @include sp {
+        font-size: 35px;
+    }
+    @include pc {
+        min-width: 600px;
+        font-size: medium;
+    }
 }
 
 ::selection {
@@ -14,12 +34,19 @@ body {
 
 header {
     display: flex;
-    font-size: 64px;
     font-weight: bold;
     background-color: $main-color;
-    padding: 30px;
     margin-bottom: 50px;
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32);
+    @include sp {
+        font-size: 100px;
+        padding: 60px;
+    }
+    @include pc {
+        font-size: 50px;
+        padding: 30px;
+    }
+
     h1 {
         margin: auto;
     }
@@ -29,55 +56,96 @@ header {
     &-settings {
         display: flex;
         flex-flow: column;
-        width: 60%;
-        // background-color: #eeeeee;
         border-radius: 20px;
         border: #000 solid 2px;
+        @include sp {
+            width: 95%;
+        }
+        @include pc {
+            width: 60%;
+        }
 
         .setting {
+            @include sp {
+                width: 80%;
+            }
+            @include pc {
+                width: 80%;
+            }
             display: flex;
-            width: 80%;
             padding: 30px;
             margin: 0 auto;
+            @include sp {
+                flex-flow: column;
+            }
+            @include pc {
+                flex-flow: row;
+            }
             #bingo-range {
                 margin-left: auto;
             }
             &-text {
                 margin-right: auto;
+                @include sp {
+                    font-size: 40px;
+                }
+                @include pc {
+                    font-size: medium;
+                }
             }
             ul {
-                list-style: square; /* アイコンの種類指定 */
+                list-style: square;
             }
             li {
-                margin: 4px 0;
+                @include sp {
+                    margin: 8px 0;
+                }
+                @include pc {
+                    margin: 4px 0;
+                }
             }
         }
         &--accordion-menu {
             .bingo-settings--accordion-menu--text {
+                @include sp {
+                    font-size: 60px;
+                    padding: 50px;
+                }
+                @include pc {
+                    font-size: 30px;
+                    padding: 20px;
+                }
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 cursor: pointer;
-                font-size: 30px;
                 font-weight: bold;
-                margin: 20px 20px 0px 20px;
-                padding: 20px;
                 background-color: $main-color;
                 border: solid 2px;
                 border-radius: 10px;
+                margin: 20px 20px 0px 20px;
                 span {
                     margin-right: 30px;
                     position: relative;
                     transition: 500ms;
                     &::before {
+                        @include sp {
+                            width: 16px;
+                            height: 16px;
+                            border-top: solid 4px #000;
+                            border-right: solid 4px #000;
+                        }
+                        @include pc {
+                            width: 8px;
+                            height: 8px;
+                            border-top: solid 2px #000;
+                            border-right: solid 2px #000;
+                        }
                         top: -6px;
                         right: -6px;
                         content: "";
                         position: absolute;
-                        width: 8px;
-                        height: 8px;
-                        border-top: solid 2px #000;
-                        border-right: solid 2px #000;
+
                         transform-origin: center center;
                         -webkit-transform: rotate(135deg);
                         transform: rotate(135deg);
@@ -89,12 +157,19 @@ header {
                     transition: 500ms;
                 }
                 p {
+                    @include sp {
+                        visibility: hidden;
+                    }
+                    @include pc {
+                        visibility: visible;
+                    }
                     margin-left: auto;
                     margin-right: 10px;
                     text-align: center;
                     font-size: small;
                     font-weight: normal;
                 }
+
                 &:hover {
                     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32);
                 }
@@ -104,11 +179,19 @@ header {
             }
         }
         button {
+            @include sp {
+                font-size: xx-large;
+                padding: 20px 40px;
+                margin: 60px auto 30px auto;
+            }
+            @include pc {
+                font-size: medium;
+                padding: 10px 20px;
+                margin: 40px auto 20px auto;
+            }
             font-weight: bold;
-            padding: 10px 20px;
             text-decoration: none;
             background: $main-color;
-            margin: 40px auto 20px auto;
             border-radius: 10px;
             &:hover {
                 box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32); /*影*/
@@ -118,26 +201,42 @@ header {
 }
 
 .input-range[type="range"] {
+    @include sp {
+        margin: 50px auto 20px auto;
+        height: 18px;
+        width: 100%;
+        border-radius: 6px;
+    }
+    @include pc {
+        margin: 0;
+        margin-left: auto;
+        height: 9px;
+        width: 50%;
+        border-radius: 6px;
+    }
     -webkit-appearance: none;
     appearance: none;
     background-color: #bbbbbb;
-    height: 9px;
-    width: 50%;
-    border-radius: 6px;
-
     &:focus,
     &:active {
         outline: none;
     }
 
     &::-webkit-slider-thumb {
+        @include sp {
+            border: 5px solid rgb(0, 0, 0);
+            width: 44px;
+            height: 44px;
+        }
+        @include pc {
+            border: 2px solid rgb(0, 0, 0);
+            width: 22px;
+            height: 22px;
+        }
         -webkit-appearance: none;
         appearance: none;
         cursor: pointer;
         position: relative;
-        border: 2px solid rgb(0, 0, 0);
-        width: 22px;
-        height: 22px;
         display: block;
         background-color: $main-color;
         border-radius: 50%;
@@ -153,27 +252,47 @@ header {
 #main-inner {
     display: flex;
     justify-content: center;
-    width: 90%;
     margin: auto;
-    min-width: 700px;
+    @include sp {
+        width: 100%;
+    }
+    @include pc {
+        min-width: 700px;
+        width: 90%;
+    }
 }
 
 table {
-    margin: auto;
-    border: 2px solid #fff;
+    @include sp {
+        border: 4px solid #fff;
+        width: 95%;
+    }
+    @include pc {
+        border: 2px solid #fff;
+        width: auto;
+    }
+    table-layout: fixed;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.32); /*影*/
 }
 
 th,
 td {
+    @include sp {
+        font-size: 35px;
+        // width: 150px;
+        height: 150px;
+        border: 4px dashed #fff;
+    }
+    @include pc {
+        font-size: 30px;
+        width: 100px;
+        height: 100px;
+        border: 2px dashed #fff;
+    }
     cursor: pointer;
     border-collapse: collapse;
-    border: 2px dashed #fff;
-    font-size: 30px;
     font-weight: bold;
     background-color: $main-color;
-    width: 100px;
-    height: 100px;
     text-align: center;
     vertical-align: middle;
 }
@@ -182,8 +301,14 @@ footer {
     display: flex;
     flex-flow: column;
     background-color: #dddddd;
-    padding: 20px;
-    margin-top: 50px;
+    @include sp {
+        padding: 40px;
+        margin-top: 50px;
+    }
+    @include pc {
+        padding: 20px;
+        margin-top: 50px;
+    }
     p {
         margin: 5px;
         margin-left: auto;
@@ -215,7 +340,6 @@ footer {
     z-index: 9999;
     transition: 0.6s;
     display: none;
-
     &-inner {
         position: absolute;
         left: 50%;
