--- a/css/styles.css
+++ b/css/styles.css
@@ -447,6 +447,30 @@ footer .sns-links .twitter a {
   padding: 50px;
   background-color: #fff;
   z-index: 2;
+  display: flex;
+}
+
+.popup-inner h2 {
+  margin: auto;
+  font-weight: 900;
+  letter-spacing: 15px;
+  color: transparent;
+  background: repeating-linear-gradient(45deg, aquamarine 0.1em 0.2em, pink 0.1em 0.3em);
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 2px #252525;
+  text-stroke: 2px #252525;
+}
+
+@media (min-width: 480px) {
+  .popup-inner h2 {
+    font-size: 90px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .popup-inner h2 {
+    font-size: 80px;
+  }
 }
 
 .popup .close-btn {
